修改首页以及其他优化

--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -144,13 +144,7 @@
     <footer fixed="{{false}}"></footer>
   </view>
   <!-- 发布 -->
-  <view 
-    class="index-release flex-center"
-    catchtap="openModel"
-  >
-    <view class="bg"></view>
-    <text>发布</text>
-  </view>
+  <release show="{{releaseShow}}"></release>
 </view>
 <dialog show="{{showModel}}">
   <view class="certification">
